@@ -42,6 +42,8 @@ class symtab
     int get(const char *s, unsigned int *i, unsigned char *t);
     /* get the ith identifier of type t */
     int get(unsigned int i, unsigned char t, char **s);
+    /* get an array of identifiers that matches the given type */
+    int get(unsigned char t, char ***a, unsigned int *s);
     /* return the number of identifiers that are of type t */
     unsigned int length(unsigned char t);
     /* return true if symbol is in the table */
